[package]
name = "crank"
version = "0.2.4"
authors = ["Rob Tsuk <robtsuk@google.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
cargo_metadata = "0.10.0"
dirs = "2.0.2"
Inflector = "0.11.4"
log = { version = "0.4.8", features = ["max_level_trace", "release_max_level_trace"] }
pretty_env_logger = "0.4.0"
serde = "1.0.110"
serde_derive = "1.0.110"
structopt = "0.3.14"
toml = "0.5.6"
zip = "0.5.6"
zip-extensions = "0.5.0"